# Loco_manipulation_control

./: .gitmodules  README.md
quadruped_control/: CMakeLists.txt  README.md  package.xml
quadruped_control/BalanceController/: BalanceController.cpp  BalanceControllerWrapper.cpp
quadruped_control/ConvexMPC/: LocoManipulationMPC.cpp  LocoManipulationMPC.h  MPCLocoMotion.cpp  MPCLocoMotion.h  MPCSolver.cpp  MPCSolver.h  NominalMPC.cpp  NominalMPC.h  RobotState.cpp  RobotState.h  StairMPC.cpp  StairMPC.h
quadruped_control/include/BalanceController/: BalanceController.hpp
quadruped_control/include/ConvexMPC/: Gait.h  LocoManipulationMPC.h  MPCLocoMotion.h  MPCSolver.h  NominalMPC.h  RobotState.h  StairMPC.h
quadruped_control/include/FSM/: FSM.h  FSMState.h  FSMState_Climb.h  FSMState_Manipulation.h  FSMState_PDStand.h  FSMState_QPStand.h  FSMState_ThreeFoot.h  FSMState_Walking.h
quadruped_control/include/common/: ContactEstimator.h  ControlFSMData.h  DesiredCommand.h  LegController.h  PositionVelocityEstimator.h  Quadruped.h  StateEstimatorContainer.h  enumClass.h
quadruped_control/include/common/Math/: Interpolation.h  orientation_tools.h
quadruped_control/include/common/Utilities/: Utilities_print.h  pseudoInverse.h  utilities.h
quadruped_control/include/interface/: CmdPanel.h  IOInterface.h  IOROS.h  KeyBoard.h  WirelessHandle.h
quadruped_control/include/messages/: HighlevelCmd.h  LowLevelCmd.h  LowlevelState.h
quadruped_control/include/sdk/: IOSDK.h
quadruped_control/include/sdk/include/unitree_legged_sdk/: udp.h
quadruped_control/src/: a1_ctrl.cpp  aliengo_ctrl.cpp  main.cpp  quad_control.cpp  quad_control_hardware.cpp
quadruped_control/src/ConvexMPC/: Gait.cpp  LocoManipulationMPC.cpp  MPCSolver.cpp  NominalMPC.cpp  StairMPC.cpp
quadruped_control/src/FSM/: FSM.cpp  FSMState_Climb.cpp  FSMState_Manipulation.cpp  FSMState_PDStand.cpp  FSMState_Passive.cpp  FSMState_QPStand.cpp  FSMState_ThreeFoot.cpp  FSMState_Walking.cpp
quadruped_control/src/common/: DesiredCommand.cpp  FootSwingTrajectory.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
quadruped_control/src/interface/: IOROS.cpp  KeyBoard.cpp  WirelessHandle.cpp
quadruped_control/src/sdk/: IOSDK.cpp
quadruped_hardware/: CMakeLists.txt  package.xml
quadruped_hardware/include/: IOSDK.h  WirelessHandle.h
quadruped_hardware/include/sdk/: IOSDK.h
quadruped_hardware/include/sdk/include/unitree_legged_sdk/: joystick.h
quadruped_hardware/include/sdk_3_3_1/include/unitree_legged_sdk/: loop.h  udp.h
quadruped_hardware/src/: IOSDK.cpp  WirelessHandle.cpp  quad_hardware_control.cpp
quadruped_hardware/src/sdk/: IOSDK.cpp
quadruped_sim/: CMakeLists.txt  package.xml
quadruped_sim/config/: robot_control.yaml
quadruped_sim/include/: IOROS.h
quadruped_sim/launch/: spawn_robot.launch  two_robot.launch  world_only.launch
quadruped_sim/src/: IOROS.cpp  quad_sim_control.cpp
quadruped_sim/worlds/: normal_with_asym_object.world  normal_with_box.world
quadruped_sim/xacro/: robot.xacro
unitree_description/: CMakeLists.txt
unitree_description/launch/: spawn_robot.launch  world_only.launch
unitree_description/xacro/: a1.xacro  aliengo.xacro  gazebo.xacro  go1.xacro  robot.xacro
unitree_description/xacro/common/: contact_sensor.xacro  imu.xacro  leg.xacro
unitree_ros/robots/a1_description/xacro/: gazebo.xacro  robot.xacro
unitree_ros/robots/aliengo_description/xacro/: _d435.gazebo.xacro  _d435.urdf.xacro  gazebo.xacro  robot.xacro
unitree_ros/robots/b1_description/xacro/: gazebo.xacro
unitree_ros/unitree_description/: CMakeLists.txt  package.xml
unitree_ros/unitree_description/xacro/: robot.xacro
unitree_ros/unitree_gazebo/: CMakeLists.txt
unitree_ros/unitree_gazebo/launch/: load_robot.launch  normal.launch  plotjuggler.launch
unitree_ros/unitree_gazebo/plugin/: foot_contact_plugin.cc
unitree_ros/unitree_gazebo/worlds/: multiple_friction.world  two_storeys.world
unitree_ros/unitree_legged_control/src/: joint_controller.cpp
