<?xml version="1.0"?>
<package format="2">
    <name>quadruped_control</name>
    <version>0.0.0</version>
    <description>The quadruped controller package</description>

    <maintainer email="yiyuc@usc.edu">Yiyu</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>genmsg</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <depend>qpoases_catkin</depend>
    <depend>cython</depend>
    <depend>python-numpy</depend>

</package>
