<?xml version="1.0"?>
<package format="2">
    <name>quadruped_sim</name>
    <version>0.0.0</version>
    <description>The quadruped_sim package</description>

    <maintainer email="somboles@usc.edu">Mohsen Sombolestan</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>a1_description</depend>
    <depend>aliengo_description</depend>
    <depend>go1_description</depend>
    <depend>unitree_legged_control</depend>
    <depend>unitree_legged_msgs</depend>
    <depend>unitree_gazebo</depend>
    <depend>quadruped_control</depend>

</package>
