<?xml version="1.0"?>
<package format="2">
    <name>unitree_description</name>
    <version>0.0.0</version>
    <description>The unitree_description package</description>

    <maintainer email="aliengo@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>a1_description</depend>
    <depend>aliengo_description</depend>
    <depend>go1_description</depend>

</package>
